# how-high-is-my-salary-enclave-app

./: README.md
.github/workflows/: build-and-sign-eif.yaml  semgrep.yaml
client/: attestation_doc_helper.py  config.ini  encryption_helper.py  main.py  requirements.txt
enclave/: Dockerfile  run.sh
enclave/app/: Cargo.toml
enclave/app/src/: attestation.rs  encryption.rs  main.rs  salary.rs
enclave/lib/: net-tools-2.10.tar.xz
terraform/: ec2.tf  outputs.tf  provider.tf  terraform.tfvars  user-data.sh.tpl  variables.tf  vpc.tf
