[package]
name = "how-high-is-my-salary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
aws-nitro-enclaves-nsm-api = "0.4.0"
base64 = "0.21.7"
indexmap = "2.2.6"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.197"
serde_bytes = "0.11.14"
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4",] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
